# dogs_vs_cats

./: .gitignore  README.md  TODO.md  dash_dogs_vs_cats_classifier.py  dogs_vs_cats.ipynb  predict.py  pyproject.toml  run_server.cmd
.github/: GITHUB.md
data/: DATA.md
data/gcp/: all_data.csv
